# PLATO-NEO

./: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: CONTRIBUTING.md  GETTING_STARTED.md  QUICK_REFERENCE.md
examples/: basic_generation.py
metaluminous/: __init__.py  config.py
metaluminous/api/: __init__.py  four_sages.py  llm_clients.py
metaluminous/core/: __init__.py  consensus.py  engine.py  generation.py  tribunal.py
metaluminous/models/: __init__.py  schema.py
metaluminous/prompts/: __init__.py  templates.py
metaluminous/research_programs/: formal_ethics.py  measurement_consciousness.py
metaluminous/web/: __init__.py  app.py
scripts/: setup.sh
tests/: conftest.py
tests/unit/: test_consensus.py  test_models.py
